chore: update translations with Fink 🐦

--- a/custom_components/thermal_comfort/translations/pl.json
+++ b/custom_components/thermal_comfort/translations/pl.json
@@ -107,6 +107,7 @@
         }
       },
       "summer_scharlau_perception": {
+        "name": "Postrzeganie temperatury według Scharlaua (lato)",
         "state": {
           "outside_calculable_range": "Poza obliczalnym zakresem",
           "comfortable": "Komfortowo",
